fix: visually rearrange alignments in refinement lists

--- a/src/App.scss
+++ b/src/App.scss
@@ -347,7 +347,7 @@
 
 .uni-RefinementList-ListContainer {
   max-height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 /* Hits */
